--- a/NoteKeeper.Main/NoteKeeper.Main.csproj
+++ b/NoteKeeper.Main/NoteKeeper.Main.csproj
@@ -8,4 +8,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="D:\Projects\DORVPN\DORVPN.ExtendedControls\DORVPN.ExtendedControls.csproj" />
+  </ItemGroup>
+
 </Project>
