--- a/NoteKeeper.Main/NoteKeeper.Main.csproj
+++ b/NoteKeeper.Main/NoteKeeper.Main.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="D:\Projects\DORVPN\DORVPN.ExtendedControls\DORVPN.ExtendedControls.csproj" />
   </ItemGroup>
 
